src/objects/QPMS__Change_Management__c.object
<CustomObject>
    <fields>
        <fullName>QPMS__Sequence__c</fullName>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Severity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Severity</label>
        <referenceTo>QPMS__Risk_Severity__c</referenceTo>
        <relationshipLabel>Change Management</relationshipLabel>
        <relationshipName>Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Signed_Off_Details__c</fullName>
        <label>Signed Off Details</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Document</fullName>
                    <default>true</default>
                    <label>Document</label>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>CAPA</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Continuous Improvement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Document Change Order</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Pending Review</fullName>
                </value>
                <value>
                    <fullName>Change Workflow</fullName>
                </value>
                <value>
                    <fullName>Under</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Target_Implementation__c</fullName>
        <label>Target Implementation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Title__c</fullName>
        <label>Title</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Valid_Change_Review_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Change Review Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__currenappSequenceNumber__c</fullName>
        <description>Current approver sequence number</description>
        <label>currenappSequenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__isLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLocked</label>
        <type>Checkbox</type>
    </fields>
    <label>Change Management</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>NAME</columns>
        <columns>QPMS__Closed__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>QPMS__Title__c</columns>
        <columns>QPMS__Status__c</columns>
        <columns>QPMS__Audit_Number__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>CR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Management</pluralLabel>
    <recordTypes>
        <fullName>QPMS__Document</fullName>
        <active>true</active>
        <label>Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Process</fullName>
        <active>true</active>
        <label>Process</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Product</fullName>
        <active>true</active>
        <label>Product</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>QPMS__Allowed_days_is_required</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(QPMS__Allowed_Days__c)</errorConditionFormula>
        <errorMessage>Allowed days is required</errorMessage>
    </validationRules>
</CustomObject>